# 5e

./: CMakeLists.txt  main.c
string/: CMakeLists.txt  string_.c  string_.h
string/tasks/: alternatingWords.h  areWordsOrdered.h  digitToStart.h  getBagOfWords.h  howManyWordsPalindromes.h  removeExtraSpaces.h  removeNonLetters .h  removeNonLetters.h  replace.h  replaceNumbersWithSpaces.h  reverseTheOrderOfWordsInString.h
